Small improvements (see desc.)
- update autoregister to use the default constructor
- instead of counting the files in a new thread use cached thread pool